Fix dark mode background color

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,7 @@
-:root {
-  --dark: rgb(15, 23, 42);
-}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .main {
   height: 100vh;
-}
-
-#dark {
-  background-color: var(--dark);
 }
